# romaji-memo

./: CLAUDE.md  README.md  package-lock.json  package.json  providers.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: document-mode-re-convert-json-parse-error.md  knowledge-base.md
.planning/debug/resolved/: provider-anthropic-not-found.md
.planning/phases/01-core-conversion-loop/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/pre/: romaji-memo-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keychain.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: convert.rs  history.rs  mod.rs  providers.rs  styles.rs  window.rs
src-tauri/src/db/: conversions.rs  custom_styles.rs  migrations.rs  mod.rs  settings.rs
src-tauri/src/providers/: anthropic.rs  copilot.rs  mod.rs  openai.rs  prompts.rs
src-tauri/tests/: prompt_spike.rs
src/components/: Converter.tsx  DocumentMode.tsx  DraftBuffer.tsx  HistoryDrawer.tsx  ResultDisplay.tsx  StyleSelector.tsx  TitleBar.tsx
src/hooks/: useClipboardWatch.ts  useConvert.ts  useCustomStyles.ts  useHistory.ts  useProviders.ts
src/lib/: styles.ts  tauri.ts
src/store/: bufferStore.ts  conversionStore.ts  documentStore.ts  historyStore.ts  settingsStore.ts
(+47 files in other folders)
